--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@
 
 @layer utilities {
   .btn {
-    @apply py-2 px-9 border-2 rounded-md
+    @apply py-2 px-3 md:px-9 border-2 rounded-md
      border-dark_primary rounded-br-3xl font-medium;
   }
   .title {
